s2_bits_set/test/submission2.test
_id: 5c684c796779dd5666b9938c
archive: 5c684c7a6779dd5666b9938d
courseid: LSINF1252
custom: {}
grade: 0.0
input:
    '@lang': en
    '@random': []
    '@state': ''
    '@username': aboukhalid
    q1: |
        if (value == 1)
        {
            uint64_t a = 1;
            uint64_t a = a << pos;
            return (a & x);
        }
        else
        {

        }
problems: {}
response_type: rst
result: failed
state: ''
status: done
stderr: ''
stdout: ''
submitted_on: 2019-02-16 18:46:33.579000
taskid: set_bit
tests:
    not_compile: true
text: |+
    La compilation de votre code a échoué. Voici le message de sortie de la commande ``make`` :

    .. code-block::

        gcc -Wall -Werror -DC99 -std=gnu99 -ICTester -c -o tests.o tests.c
        gcc -Wall -Werror -DC99 -std=gnu99 -ICTester -c -o student_code.o student_code.c
        student_code.c: In function ‘set_bit’:
        student_code.c:8:18: error: redefinition of ‘a’
                 uint64_t a = a << pos;
                          ^
        student_code.c:7:18: note: previous definition of ‘a’ was here
                 uint64_t a = 1;
                          ^
        student_code.c:16:1: error: control reaches end of non-void function [-Werror=return-type]
         }
         ^
        cc1: all warnings being treated as errors
        make: *** [student_code.o] Error 1

username:
- aboukhalid
